<resources>
    <string name="app_name">BusScheduleMaker</string>
    <string name="tv_edit">編集</string>
    <string name="tv_new_schedule">新規時刻表</string>
    <string name="tv_schedule_index">時刻表一覧</string>
    <string name="tv_setting">設定</string>
    //ダイアログ
    <string name="tv_title">タイトル</string>
    <string name="et_title_hint">例．学校前行き</string>
    <string name="tv_destination">行き先</string>
    <string name="et_destination_hint">例．学校</string>
    <string name="tv_bus_stop">乗車場所</string>
    <string name="et_bus_stop_hint">例．駅西口</string>
    <string name="tv_operational_hour">運行時間帯</string>
    <string name="et_first_train_time_hint">6</string>
    <string name="et_last_train_time_hint">11</string>
    <string name="bt_thx_ng">キャンセル</string>
    <string name="bt_thx_ok">OK</string>
    <string name="errormessage1">空欄があります。</string>
    <string name="errormessage2">運行時間に誤りがあります。\n入力可能な範囲は1~24です。</string>
    <string name="errormessage3">運行時間に誤りがあります。\n運行時間を確認してください。</string>
    <string name="delete">消去</string>
    <string name="delete_title">次の時刻表を消去してもよろしいですか？</string>
    <string name="errormessage4">編集できるデータがありません。</string>
</resources>